--- a/public/404.html
+++ b/public/404.html
@@ -4,21 +4,19 @@
     <meta charset="utf-8" />
     <title>TrainerPath</title>
     <script>
-      // Single Page Apps for GitHub Pages
-      // https://github.com/rafgraph/spa-github-pages
-      // This script takes the current url and converts the path and query
-      // string into just a query string, and then redirects the browser
-      // to the new url with only a query string and hash fragment
-      var pathSegmentsToKeep = 1;
+      // Single Page Apps for GitHub Pages - Redirect to index.html with path
+      var pathSegmentsToKeep = 1; // Keep "trainer-log"
 
       var l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
+      var path = l.pathname.split('/').slice(pathSegmentsToKeep + 1).join('/');
+
+      var redirectUrl = l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        l.pathname.split('/').slice(0, pathSegmentsToKeep + 1).join('/') + '/' +
+        (path ? '?/' + path.replace(/&/g, '~and~') : '') +
+        (l.search ? (path ? '&' : '?') + l.search.slice(1).replace(/&/g, '~and~') : '') +
+        l.hash;
+
+      l.replace(redirectUrl);
     </script>
   </head>
   <body>
