--- a/public/404.html
+++ b/public/404.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8" />
-    <title>TrainerPath</title>
+    <meta charset="utf-8">
+    <title>Redirecting...</title>
     <script>
-      // Single Page Apps for GitHub Pages - Redirect to index.html with path
-      var pathSegmentsToKeep = 1; // Keep "trainer-log"
-
-      var l = window.location;
-      var path = l.pathname.split('/').slice(pathSegmentsToKeep + 1).join('/');
-
-      var redirectUrl = l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, pathSegmentsToKeep + 1).join('/') + '/' +
-        (path ? '?/' + path.replace(/&/g, '~and~') : '') +
-        (l.search ? (path ? '&' : '?') + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash;
-
-      l.replace(redirectUrl);
+      // Redirect to index.html with the path as a hash
+      // This avoids React hydration issues
+      const path = window.location.pathname.replace('/trainer-log', '');
+      const redirect = '/trainer-log/' + (path === '/' ? '' : '#' + path);
+      window.location.replace(redirect + window.location.search + window.location.hash);
     </script>
   </head>
   <body>
+    <p>Redirecting...</p>
   </body>
 </html>
